--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.4.1",
     "react-lines-ellipsis": "^0.13.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-router": "3.2.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
