--- a/src/settings.json
+++ b/src/settings.json
@@ -9,7 +9,7 @@
         "searchByImdbId": "&i="
     },
     "resultsApi": {
-        "documentation": "https://developers.themoviedb.org/3/find/find-by-id",
+        "documentation": "https://developers.themoviedb.org/3",
         "key": "?api_key=84106750d8a60bce5c3b42e20e3b6f46",
         "baseRequestUrl": "https://api.themoviedb.org/3/",
         "getFilmGenres": "genre/movie/list",
