--- a/src/settings.json
+++ b/src/settings.json
@@ -2,7 +2,7 @@
     "api": {
         "documentation": "http://www.omdbapi.com/",
         "key": "8407048c",
-        "baseRequestUrl": "http://www.omdbapi.com/?apikey=8407048c",
+        "baseRequestUrl": "https://www.omdbapi.com/?apikey=8407048c",
         "searchByTitle": "&s=",
         "searchForTvShow": "&type=series",
         "searchForFilm": "&type=movie",
