--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "something2watch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://www.something2watch.com",
   "dependencies": {
     "@material-ui/core": "^1.4.0",
     "radium": "^0.24.1",
@@ -18,7 +19,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy" : "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
